# lib_gsl

./: CMakeLists.txt
bspline/: gsl_bspline.h
cmake/: config.cmake.in  configure.cmake  gsl.pc.cmake.in  util.cmake
ieee-utils/: env.c
interpolation/: gsl_interp.h
linalg/: gsl_linalg.h
matrix/: test.c
opt/: folders.csv
opt/overwrite/ieee-utils/: env.c
spmatrix/: test.c
